Add JWT authorization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 logging:
   level:
     web: 'DEBUG'
+  
+spring.security.filter.order=10
+
+security.signing-key: mySecretKey
+
+# spring:
+#     data:
+#         mongodb:
+#             database: demo_db
+#             host: localhost
+#             port: 27017
