--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,8 @@
-logging:
-  level:
-    web: 'DEBUG'
-  
+logging.level.web: DEBUG
+
 spring.security.filter.order=10
 
 security.signing-key: mySecretKey
 
-# spring:
-#     data:
-#         mongodb:
-#             database: demo_db
-#             host: localhost
-#             port: 27017
+spring.data.mongodb.uri: ${MONGODB_URI}
+spring.data.mongodb.database=cluster0
