--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ security.signing-key: mySecretKey
 
 spring.data.mongodb.uri: ${MONGODB_URI}
 spring.data.mongodb.database=cluster0
+
+server.port=${PORT:8080}
