Implement proper solver

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.data.mongodb.uri: ${MONGODB_URI}
 spring.data.mongodb.database=cluster0
 
 server.port=${PORT:8080}
+
+# optaplanner.solver.termination.spent-limit=30s
+# logging.level.org.optaplanner=debug
